tests/typing/bad/testfile-constant2-1.scala
class A {
    var x: Int = true
}
object Main { def main(args: Array[String]) { } }
